NEXT:
 * Add sha256 support to e2source file config
 * Add sha256 support to e2licence config
 * Add sha256 support to e2chroot config
 * Add selection of checksum algorithms to proj/config
 * Fix checksum verification of some file sources used by collect_project
 * Fix SourceID calculation in files plugin under artificial conditions
 * Remove error message when an optional tool isn't present

e2factory-2.3.15
 * result.tar does not contain leading ./ prefix any more
 * added typo detection in source and result config files
 * reduced warning noise
 * add warning for empty e2env references
 * make the cache truly transparent
 * improve error reporting in dependency cycle detection
 * ls-project displays sub-licenses of file sources
 * add warning when deploying release builds to disabled server
 * improve error handling when encountering erroneous config files
 * prevent manipulation of the lua string module from config files
 * reduce what's possible (but not advertised) in config files
 * fix CVS/SVN LicenseID calculation
 * detect if an unpack location in a source config points to non-existent dir
 * put an end to changing the working directory of the process repeatedly
 * replaced ad-hoc shell command strings with argument tables or safe quoting
 * unified command execution facilities
 * unified IO facilities and surrounding error handling
 * removed reliance on many shell commands
 * e2factory developer documentation improvements
 * internal error handling has been rewritten
 * collect_project now creates "Makefile" instead of "makefile".
 * remove unusable E2_BUILD_NUMBER variable from build-script.
 * on git source update, fetch tags and prevent non-ff merges
 * object oriented structure for sources, results, chroot, build process, ...
 * split e2factory core into logical modules

e2factory-2.3.14p1
 * Provide io.open/io.popen wrappers that set FD_CLOEXEC
 * On startup, close all file descriptors except for stdin, stdout, and stderr