@@ -1,4 +1,5 @@
 NEXT:
+ * Fix unintended modification of the git index in working source directory.
  * Add sha256 support to e2source file config
  * Add sha256 support to e2licence config
  * Add sha256 support to e2chroot config
